name:                orderbook
version:             0.1.0.0
synopsis:            A simple order book
license:             BSD3
license-file:        LICENSE
author:              Paul Koerbitz
maintainer:          paul.koerbitz@theppro.com
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:   Orderbook
  build-depends:     base >=4.6 && <4.7,
                     containers >= 0.5
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall


Test-Suite test-orderbook
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.6 && <4.7,
                       containers >= 0.5,
                       HUnit >= 1.2 && < 2,
                       test-framework >= 0.4.1,
                       test-framework-quickcheck2,
                       test-framework-hunit,
                       orderbook
  hs-source-dirs:      test, src
  ghc-options:         -Wall
  x-uses-tf:           true
  default-language:    Haskell2010
  main-is:             test-orderbook.hs
